--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
